--- a/css.css
+++ b/css.css
@@ -65,6 +65,14 @@ section {
     transform: translate(-50%, -50%);
 }
 
+.current-song > img:before {
+    content: ' ';
+    display: block;
+    height: 250px;
+    width: 350px;
+    background-image: url(fallback.png);
+    background-position: 0;
+}
 .current-song {
     width: 350px;
     height: 250px;
